lasid-old-uece/lasid-old-uece-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lasid-old-uece
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: lasid-old-uece
